added page to recruit speakers and renamed to markdown files

--- a/src/index.html
+++ b/src/index.html
@@ -2,4 +2,10 @@
 layout: default
 ---
 
-<h1>index</h1>
+<h1>Home Page</h1>
+<ul>
+    <li>Next Meetup</li>
+    <li>Newest Tutorial/Blog Post</li>
+    <li>Other News</li>
+    <li>Slack Channel</li>
+</ul>
