--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,15 @@ layout: home
     <section class="home__main">
 
         {% for event in site.categories.events | first %}
+        <div class="home__event">
             <h2>Next Event: {{ event.day }}</h2>
             <h3><a href="{{ event.url }}">{{ event.title }}</a></h3>
             <p>{{ event.description }}</p>
+            <a class="button" href="{{ event.rsvp }}">
+                <img src="/images/meetup-logo.svg" />
+                RSVP
+            </a>
+        </div>
         {% endfor %}
 
         <hr />
