--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@ layout: home
 
     <section class="home__main">
 
-        {% for event in site.categories.events | first %}
+        {% for event in site.categories.events limit:2 %}
         <div class="event__desc">
-            <h2>Next Event: {{ event.day }}</h2>
+            <h2>{{ event.day }}</h2>
             <h3><a href="{{ event.url }}">{{ event.title }}</a></h3>
             <p>{{ event.description }}</p>
             <a class="button" href="{{ event.rsvp }}">
