added a sponsorship link to the job board

--- a/src/jobs.html
+++ b/src/jobs.html
@@ -7,7 +7,9 @@ permalink: /jobs/
 <h1>DDV Job Board</h1>
 <p>
     Check out the awesome jobs below in the Dayton area. If you have a job to
-    post, please contact Michael Bowman at <a href="mailto://bowmanmc@gmail.com">bowmanmc@gmail.com</a>
+    post, please contact Michael Bowman at <a href="mailto://bowmanmc@gmail.com">bowmanmc@gmail.com</a>.
+    Posting is free (for now), but we'd love to add you to our
+    <a href="/sponsors">sponsors list</a>.
 </p>
 
 {% for job in site.jobs %}
