--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@ layout: home
                 <li>
                     <strong>Help us maintain this site!</strong> We need help generating content, fixing
                     bugs, and adding features. Check out our current list of
-                    <a href="https://github.com/daytondv/www.daytondv.com/issues">issues on GitHub</a>
+                    <a href="https://github.com/daytondv/www.daytondv.org/issues">issues on GitHub</a>
                     and contribute where you can.
                 </li>
                 <li>
