Show youtube links instead of rsvp links if youtube links are there

--- a/src/events.html
+++ b/src/events.html
@@ -9,10 +9,17 @@ permalink: /events/
     <div class="event__desc">
         <h3><a href="{{ event.url }}">{{ event.day }} {{ event.title }}</a></h3>
         <p>{{ event.description }}</p>
-        <a class="button" href="{{ event.rsvp }}">
-            <img src="/images/meetup-logo.svg" />
-            RSVP
-        </a>
+        {% if event.youtube %}
+            <a class="button" href="{{ event.youtube }}">
+                <img src="/images/youtube.svg" />
+                YouTube
+            </a>
+        {% else %}
+            <a class="button" href="{{ event.rsvp }}">
+                <img src="/images/meetup-logo.svg" />
+                RSVP
+            </a>
+        {% endif %}
     </div>
 
     {% if forloop.last == false %}
