Remove Chris's contact information

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -8,8 +8,7 @@ permalink: /sponsors/
 
 <p>
     Interested in sponsoring the Dayton Data Visualization group? Please contact
-    <a href="mailto:bowmanmc@gmail.com">Michael Bowman</a> or
-    <a href="mailto:chris.dickman@appliedis.com">Chris Dickman</a>
+    <a href="mailto:bowmanmc@gmail.com">Michael Bowman</a>
     for more information.
 </p>
 
